--- a/resume.css
+++ b/resume.css
@@ -85,10 +85,28 @@ transition: .6s ease opacity,.6s ease transform;
     white-space: nowrap;
     display: none;
     font-size: 1rem;
-    background-color: rgba(230, 230, 230, 0.6);
+    background-color: black;
     padding: 10px 20px;
     border-radius: 16px;
     font-family: Tahoma, Verdana, Segoe, sans-serif;
     font-weight: normal;
+    color: white ;
+  }
+  .fa{
+color: yellow;
+
+margin-left: 10px;
   }
   
+.skill{
+border-radius: 10px;
+background-color: #f1e6e69e;
+border: 1px solid black;
+padding: 10px;
+margin: 32px;
+}
+.li{
+    margin: 10em;
+    width: 50%;
+    padding: 10em;
+}
