--- a/resume.css
+++ b/resume.css
@@ -110,3 +110,23 @@ margin: 32px;
     width: 50%;
     padding: 10em;
 }
+#chart{
+    position: relative;
+}
+
+
+/* footer ul li{
+    display: inline;
+	list-style: none;
+} */
+
+footer ul{
+    list-style: none;
+    display: flex;
+    justify-content: center;
+
+}
+footer ul li{
+    margin-left: 10px;
+
+}
